# quanttide-template-of-django-package

./: .gitignore  LICENSE  README.md  pyproject.toml
django_package/: apps.py
docs/: README.md
example/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
example/example/: settings.py  urls.py
tests/: settings.py  test_apps.py
